# rnaseq_mini_pipeline

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  config.yaml  docker-compose.yml  entrypoint.sh  internal_dashboard.sh  pyproject.toml  requirements.txt  run_project.sh
data/: GSE60450_series_matrix.txt  counts.csv  samples.csv
docker/: Dockerfile
docs/: notes.md
output/qc/: qc_table.csv
r/: clean_data.R
sql/: create_tables.sql
src/: io_setup.py  pipeline.py  qc.py
src/rnaseq/: db_setup.py  io.py  io_setup.py  pca.py  pipeline.py  qc.py  validation.py
